* Jan 11 2002, Kristian Van Der Vliet *

Removed the Lucida fonts from CVS due to licencing issues.  They have been replaced with the Lucidux fonts from XFree86, and the URW fonts taken fron GhostScript.  See the file Copyrights for full copyright and licencing information.

* Dec 23 2002, Kristian Van Der Vliet *

Upgraded Grub to 0.92 with a patch from Jack Tonkin <lists@tonkin.org.uk> which adds AFS support from 0.53.  This version of Grub is reported NOT to compile on Syllable currently, although if you wish you can easily build and install it from Linux.

* Nov 3 2002, Kristian Van Der Vliet *

Fixed the keyboard driver and appserver.  The NumLock & CapsLock keys now function and are honored by the appserver.  All keymaps now set NumLock on by default.

* Oct 24 2002, Kristian Van Der Vliet *

Added a /dev/random character device driver, which makes use of the new kernel rand() function.

* Oct 5 2002, Kristian Van Der Vliet *

Added system/libs/libpthread  This is a POSIX threads library which wraps the Syllable kernel threads.  The current code is incomplete but functional.  For more information, see the README and CHANGES files included with libpthread.

* Sep 24 2002, Kristian Van Der Vliet *

Removed the -g flags from the libatheos and appserver Makefiles, which of course reduces the size of the resulting files.

* Aug 25 2002, Kristian Van Der Vliet *

Updated nVideo driver from Iain Hutchison < iain_hutchison@yahoo.com >.  The driver now supports more cards, including the GeForce 4 and Riva128.  It should also correctly detect if you have an LCD  screen attached and set things up correctly.  The update also includes Joseph's patch to allow multiple video cards in the same PC

* Aug 25 2002, Kristian Van Der Vliet *

Applied a patch from Sebastien Keim < s.keim@laposte.net > for copy.c in Fileutils-4.1 which adds attribute support to cp

* Aug 18 2002, Kristian Van Der Vliet *
