@@ -1,4 +1,4 @@
-dhcpc 1.0 -:- A DHCP client for Syllable
+dhcpc 1.0.1 -:- A DHCP client for Syllable
 
 dhcpc is a simple DHCP/BOOTP client for Syllable 0.4.3 and later.  dhcpc is
 released under the GNU General Public Licencse.  See the file COPYING for more
